fix footnote spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,16 @@ body {
   line-height: 1.75rem;
 }
 
+.footnote {
+  font-size: 80%;
+}
+
+sup {
+  line-height: 0;
+  font-size: 80%;
+  vertical-align: super;
+}
+
 @media (max-width: 30em) {
   body {
     font-size: 14px;
@@ -36,6 +46,7 @@ body {
 
 h1{
   font-size: 2rem;
+  line-height: 2.25rem;
 }
 
 h1 a {
